--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity android:name=".AtivaRechonecimentoVoz"></activity>
         <activity android:name=".Q_R_CODE"></activity>
         <activity android:name=".DadosApp"></activity>
+        <activity android:name=".activity_tarefas2"></activity>
+        <activity android:name=".DadosAppT2"></activity>
+
     </application>
 
 </manifest>
